--- a/practice.html
+++ b/practice.html
@@ -6,9 +6,10 @@
   <body>
     <h1>Lorem ipsum</h1>
     <h2>Lorem ipsum dolor sit amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <span class="ital">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p class="important">Warning: We have no slow lorises here.</p>
     <h2 class="typewriter">This heading is in typewriter text.</h3>
       <p class="typewriter">This paragraph is also in typewriter text.</p>
+      <p><b>blah blah</b> <strong>yabba dabba </strong><em>zippity fucken doo dah </em><i>one more</i>
   </body>
 </html>
